# webrtc

./: .gitignore  CMakeLists.txt  LICENSE  README-Detail.md  README.md  build-all.sh  signaliing.py  web.lnk  webrtc_publisher.cpp  webrtc_viewer.html
av_track/: .dockerignore  CMakeLists.txt  Dockerfile  av_track_rtc.service  av_track_rtc.sh  build-docker.sh  build.sh  docker-entrypoint.sh  install.sh  mem_leak_check.sh  run-docker.sh
av_track/include/: audio_capturer.h  audio_player.h  capture.h  debug_utils.h  decoder.h  encoder.h  h264_encoder.h  h265_encoder.h  opus_decoder.h  opus_encoder.h  parse_cl.h  safe_queue.h  video_capturer.h  webrtc_publisher.h
av_track/src/: audio_capturer.cpp  audio_player.cpp  capture.cpp  debug_utils.cpp  encoder.cpp  getopt.cpp  h264_encoder.cpp  h265_encoder.cpp  main.cpp  opus_decoder.cpp  opus_encoder.cpp  parse_cl.cpp  safe_queue.cpp  video_capturer.cpp  webrtc_publisher.cpp
av_track/web/: rtc.js  script.js  status.js  style.css  viewer.html  webrtc_viewer.html
av_track/web/rc/: index.html  style.css  video_rtc.js  ws_control.js
data_track/: CMakeLists.txt  Dockerfile  build-docker.sh  build.sh  data_track_rtc.service  data_track_rtc.sh  docker-entrypoint.sh  install.sh  run-docker.sh  sbus.md
data_track/client/: CMakeLists.txt  data_track_rtc.service  install.sh  main.cpp  parse_cl.cpp
data_track/client/include/: 4GTty.h  constants.h  motor_controller.h  motor_driver.h  system_monitor.h
data_track/client/src/: 4GTty.cpp  main.cpp  parse_cl.cpp  rc_client.cpp  rtc.cpp  throttle_levels.cpp
data_track/include/: 4g_tty.h  async_monitor.h  constants.h  cpu_monitor.h  crsf_motor_driver.h  getopt.h  gps_nmea_monitor.h  gsm_monitor.h  memory_monitor.h  message_handler.h  motor_controller.h  motor_controller_config.h  motor_driver.h  network_monitor.h  parse_cl.h  rc_client.h  rc_client_config.h  rc_protocol_v2.h  service_monitor.h  system_monitor.h  throttle_levels.h  uart_motor_driver.h
data_track/src/: 4g_tty.cpp  async_monitor.cpp  cpu_monitor.cpp  crsf_motor_driver.cpp  gps_nmea_monitor.cpp  gsm_monitor.cpp  main.cpp  memory_monitor.cpp  message_handler.cpp  motor_controller.cpp  motor_driver.cpp  network_monitor.cpp  parse_cl.cpp  rc_client.cpp  rtc.cpp  service_monitor.cpp  system_monitor.cpp  throttle_levels.cpp  uart_motor_driver.cpp
data_track/test/: crsf.cpp  hardware_config.h  read.py  serial_port.h
data_track/web/: config.html  config.js  controller_manager.js  data_rtc.js  dual_joystick_init.js  index.html  mobile.css  mobile.html  rc_protocol_v2.js  sbus_encoder.js  script.js  style.css  video_rtc.js  virtual_joystick_controller.js  webrtc_optimizer.js  yolo_detector.js
sdp/: publisher_sdp_answer.json  viewer_sdp_oferr.json
signaling_server/nodejs/: signaling.service
signaling_server/python3/: install.sh  requirements.txt  signaling.service  signaling_server.py
turn_server/: README.md  docker-compose.yml  install.sh  turnserver.conf
web/: channel_key_binder.js  config.css  config.html  config.js  control_curves.js  curve_editor.html  curve_editor.js  curve_manager.js  data_rtc.js  dual_joystick_init.js  gyroscope_controller.js  index.html  keyboard_controller.js  mobile.css  mobile.html  rc_protocol_v2.js  style.css  test_modal.html  video_rtc.js  virtual_joystick_controller.js  webrtc_optimizer.js  xbox_controller.js
